{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 163,
  "lineage": "16459f39-e760-7bc3-7f4a-67a105e337ea",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet-selected1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:191741064599:subnet/subnet-c3de2ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-c3de2ca5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191741064599",
            "state": "available",
            "vpc_id": "vpc-531d1e34"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet-selected2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:191741064599:subnet/subnet-b41d13ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-b41d13ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191741064599",
            "state": "available",
            "vpc_id": "vpc-531d1e34"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "getVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:191741064599:vpc/vpc-531d1e34",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-48ea0123",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-423f0d25",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-531d1e34",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-7b05ba1d",
            "owner_id": "191741064599",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "createNATGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-67a3d457",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-81-46.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.81.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Rd_Abhishek_Elastic_NAT",
              "product": "Rd_Abhishek_Elastic_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "asginments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a741b782c2c8632d",
            "arn": "arn:aws:ec2:us-west-1:191741064599:instance/i-0a200cdc363ac2bc8",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a200cdc363ac2bc8",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "Abhishek_RD_account_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018d7744a94aa4df4",
            "private_dns": "ip-172-31-26-32.us-west-1.compute.internal",
            "private_ip": "172.31.26.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-1:191741064599:key/1022219e-63af-465d-845c-e9f3d1a99d00",
                "throughput": 0,
                "volume_id": "vol-0e8f02a7e05532a83",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "node1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3de2ca5",
            "tags": {
              "Name": "node1",
              "product": "node1"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "node1",
              "product": "node1"
            },
            "vpc_security_group_ids": [
              "sg-0d4f2722c63645f9e"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a741b782c2c8632d",
            "arn": "arn:aws:ec2:us-west-1:191741064599:instance/i-09078fc589de72911",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09078fc589de72911",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "Abhishek_RD_account_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec7cdecc2adc67b0",
            "private_dns": "ip-172-31-30-42.us-west-1.compute.internal",
            "private_ip": "172.31.30.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-1:191741064599:key/1022219e-63af-465d-845c-e9f3d1a99d00",
                "throughput": 0,
                "volume_id": "vol-07528b6992cc0711e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "node2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3de2ca5",
            "tags": {
              "Name": "node2",
              "product": "node2"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "node2",
              "product": "node2"
            },
            "vpc_security_group_ids": [
              "sg-02ab5dbc04a81d73e"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a741b782c2c8632d",
            "arn": "arn:aws:ec2:us-west-1:191741064599:instance/i-010642a3959839d87",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010642a3959839d87",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "Abhishek_RD_account_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0864cb3a2d476c1fe",
            "private_dns": "ip-172-31-23-88.us-west-1.compute.internal",
            "private_ip": "172.31.23.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-1:191741064599:key/1022219e-63af-465d-845c-e9f3d1a99d00",
                "throughput": 0,
                "volume_id": "vol-06b8b53a1e606a9a9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "node3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-c3de2ca5",
            "tags": {
              "Name": "node3",
              "product": "node3"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "node3",
              "product": "node3"
            },
            "vpc_security_group_ids": [
              "sg-01d738c20db1cce32"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "associateNATGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-67a3d457",
            "id": "nat-0b42408ca6d9e4c7e",
            "network_interface_id": "eni-0bf29776ae456d941",
            "private_ip": "172.31.10.50",
            "public_ip": "54.241.81.46",
            "subnet_id": "subnet-b41d13ef",
            "tags": {
              "Name": "Rd_Abhishek_NAT_Gateway",
              "product": "Rd_Abhishek_NAT_Gateway"
            }
          },
          "dependencies": [
            "aws_eip.createNATGateway",
            "data.aws_subnet.subnet-selected2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "associatePrivate_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-006dbeb1ab337112d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b42408ca6d9e4c7e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-006dbeb1ab337112d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.createNATGateway",
            "aws_nat_gateway.associateNATGateway",
            "aws_route_table.createPrivateRouteTable",
            "data.aws_subnet.subnet-selected2",
            "data.aws_vpc.getVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "createPrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-006dbeb1ab337112d",
            "owner_id": "191741064599",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Rd_Abhishek_Private_Route_Table",
              "product": "Rd_Abhishek_Private_Route_Table"
            },
            "vpc_id": "vpc-531d1e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.getVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associatePriavteSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d806606281ece123",
            "route_table_id": "rtb-006dbeb1ab337112d",
            "subnet_id": "subnet-c3de2ca5"
          },
          "dependencies": [
            "aws_route_table.createPrivateRouteTable",
            "data.aws_subnet.subnet-selected1",
            "data.aws_vpc.getVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:191741064599:security-group/sg-0d4f2722c63645f9e",
            "description": "Allow inbound traffic as Per Resource/Requirement",
            "egress": [],
            "id": "sg-0d4f2722c63645f9e",
            "ingress": [],
            "name": "node1",
            "name_prefix": "",
            "owner_id": "191741064599",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "sg--node1",
              "product": "sg--node1"
            },
            "timeouts": null,
            "vpc_id": "vpc-531d1e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.subnet-selected1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:191741064599:security-group/sg-02ab5dbc04a81d73e",
            "description": "Allow inbound traffic as Per Resource/Requirement",
            "egress": [],
            "id": "sg-02ab5dbc04a81d73e",
            "ingress": [],
            "name": "node2",
            "name_prefix": "",
            "owner_id": "191741064599",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "sg--node2",
              "product": "sg--node2"
            },
            "timeouts": null,
            "vpc_id": "vpc-531d1e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.subnet-selected1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:191741064599:security-group/sg-01d738c20db1cce32",
            "description": "Allow inbound traffic as Per Resource/Requirement",
            "egress": [],
            "id": "sg-01d738c20db1cce32",
            "ingress": [],
            "name": "node3",
            "name_prefix": "",
            "owner_id": "191741064599",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "sg--node3",
              "product": "sg--node3"
            },
            "timeouts": null,
            "vpc_id": "vpc-531d1e34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.subnet-selected1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outboundRule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2528029125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d4f2722c63645f9e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3618375570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ab5dbc04a81d73e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2412300214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01d738c20db1cce32",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outboundRule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2916539932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d4f2722c63645f9e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2869094839",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ab5dbc04a81d73e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2811157642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01d738c20db1cce32",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "data.aws_subnet.subnet-selected1"
          ]
        }
      ]
    }
  ]
}